Enhance SEO, accessibility, and semantic structure of portfolio website

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,16 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Fb-Front-end | With-Angular</title>
+  <title>Federico Barzola | Desarrollador Web Front-end</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Portfolio profesional de Federico Barzola, Desarrollador Web Front-end especializado en Angular, React y tecnologías modernas">
+  <meta name="keywords" content="desarrollador web, front-end, angular, react, portfolio, Federico Barzola">
+  <meta name="author" content="Federico Barzola">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Federico Barzola | Desarrollador Web Front-end">
+  <meta property="og:description" content="Portfolio profesional de Federico Barzola, Desarrollador Web Front-end">
+  <meta property="og:type" content="website">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
