`Update portfolio content and metadata to reflect current focus and expertise`

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
   <title>Federico Barzola | Desarrollador Web Front-end</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Portfolio profesional de Federico Barzola, Desarrollador Web Front-end especializado en Angular, React y tecnologías modernas">
-  <meta name="keywords" content="desarrollador web, front-end, angular, react, portfolio, Federico Barzola">
+  <meta name="description" content="Portfolio profesional de Federico Barzola, Desarrollador Web Front-end especializado en Angular y tecnologías modernas">
+  <meta name="keywords" content="desarrollador web, front-end, angular, portfolio, Federico Barzola">
   <meta name="author" content="Federico Barzola">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Federico Barzola | Desarrollador Web Front-end">
   <meta property="og:description" content="Portfolio profesional de Federico Barzola, Desarrollador Web Front-end">
   <meta property="og:type" content="website">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/ycG8X4Zh/2022-12-12-014779.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
