Actualiza el formulario de contacto: agrega funcionalidad para enviar mensajes y mejora el diseño con Bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8">
   <title>Federico Barzola | Desarrollador Web Front-end</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Portfolio profesional de Federico Barzola, Desarrollador Web Front-end especializado en Angular y tecnologías modernas">
+  <meta name="description"
+    content="Portfolio profesional de Federico Barzola, Desarrollador Web Front-end especializado en Angular y tecnologías modernas">
   <meta name="keywords" content="desarrollador web, front-end, angular, portfolio, Federico Barzola">
   <meta name="author" content="Federico Barzola">
   <meta name="robots" content="index, follow">
@@ -14,8 +16,14 @@
   <meta property="og:type" content="website">
   <link rel="icon" type="image/x-icon" href="https://i.ibb.co/ycG8X4Zh/2022-12-12-014779.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
+
 <body>
   <app-root></app-root>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
